raw/regex-0.1.80@060-Compiler-new--2017-01-11-19-24-44--1.log
commit 1ca100d0428985f916eea153886762bed3909771
Merge: b27c709 d723e02
Author: bors <bors@rust-lang.org>
Date:   Thu Jan 12 01:01:06 2017 +0000

    Auto merge of #38605 - estebank:fix-38371, r=nikomatsakis
    
    Suggest solutions for `fn foo(&foo: Foo)`
    
    For a given file:
    
    ```rust
    struct Foo {}
    
    fn foo(&foo: Foo) {}
    ```
    
    suggest:
    
    ```
    error[E0308]: mismatched types
     --> file.rs:3:8
      |
    3 | fn foo(&foo: Foo) {}
      |        ^^^^ expected struct `Foo`, found reference
      |
      = note: expected type `Foo`
      = note:    found type `&_`
      = help: did you mean `foo: &Foo`?
    ```
    
    Fix #38371.
rustc 1.15.0-nightly (daf8c1dfc 2016-12-05)
-rwxr-xr-x 1 root root 9432 Dec  6 15:39 /usr/local/bin/rustc
rustc: ./regex-0.1.80@060-Compiler-new
git apply 060-Compiler-new.diff
find . -name "*.rs" | xargs touch
git diff
diff --git a/regex-0.1.80/src/compile.rs b/regex-0.1.80/src/compile.rs
index 9db743f..629328a 100644
--- a/regex-0.1.80/src/compile.rs
+++ b/regex-0.1.80/src/compile.rs
@@ -54,6 +54,7 @@ impl Compiler {
     ///
     /// Various options can be set before calling `compile` on an expression.
     pub fn new() -> Self {
+        {}
         Compiler {
             insts: vec![],
             compiled: Program::new(),
@@ -137,6 +138,8 @@ impl Compiler {
     }
 
     fn compile_one(mut self, expr: &Expr) -> result::Result<Program, Error> {
+        {} // @030
+
         // If we're compiling a forward DFA and we aren't anchored, then
         // add a `.*?` before the first capture group.
         // Other matching engines handle this by baking the logic into the
diff --git a/regex-0.1.80/src/expand.rs b/regex-0.1.80/src/expand.rs
index 9bea703..b4ae1ab 100644
--- a/regex-0.1.80/src/expand.rs
+++ b/regex-0.1.80/src/expand.rs
@@ -5,6 +5,7 @@ use memchr::memchr;
 use bytes::Captures;
 
 pub fn expand(caps: &Captures, mut replacement: &[u8], dst: &mut Vec<u8>) {
+    { }
     while !replacement.is_empty() {
         match memchr(b'$', replacement) {
             None => break,
@@ -84,6 +85,7 @@ fn find_cap_ref(mut replacement: &[u8]) -> Option<CaptureRef> {
 }
 
 fn is_valid_cap_letter(b: &u8) -> bool {
+    { }
     match *b {
         b'0' ... b'9' | b'a' ... b'z' | b'A' ... b'Z' | b'_' => true,
         _ => false,
RUSTFLAGS="-Z incremental=incr" cargo rustc  -- \
  -Ztime-passes -Zinput-stats -Z incremental-info
makefile:42: recipe for target 'all@060-Compiler-new' failed
done
